--- a/style.css
+++ b/style.css
@@ -115,7 +115,15 @@ form {
   font-size: 18px;
 }
 
- .matchList {
+ .match-list {
   scrollbar-width: thin;          /* "auto" or "thin" */
   scrollbar-color: blue orange;   /* scroll thumb and track */
+}
+.college-name {
+  margin:5px;
+
+}
+
+.college-name:hover {
+  background-color: rgb(85, 84, 84, 0.5);
 }
